--- a/.github/workflows/grade.yml
+++ b/.github/workflows/grade.yml
@@ -65,8 +65,13 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Install deps
-        run: npm ci
+      - name: Install deps (ci if lockfile, else install)
+        run: |
+          if [ -f package-lock.json ]; then
+            npm ci
+          else
+            npm install --no-audit --no-fund
+          fi
 
       - name: Run autograder
         run: npm run grade
